[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chemprobe"
authors = [{name = "William Connell", email = "connell@keiserlab.org"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = ["pandas", "scikit-learn", "pytorch-lightning", "rdkit"]

[project.urls]
Home = "https://github.com/keiserlab/chemprobe"
